--- a/plugins/robots/robotsInterpreter/robotSettingsPage.ui
+++ b/plugins/robots/robotsInterpreter/robotSettingsPage.ui
@@ -94,7 +94,7 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QGroupBox" name="robotModelGroupBox_2">
+    <widget class="QGroupBox" name="communicationTypeGroupBox">
      <property name="title">
       <string>Type of Communication</string>
      </property>
