--- a/qrgui/qrgui.qrc
+++ b/qrgui/qrgui.qrc
@@ -37,6 +37,8 @@
         <file>icons/save.png</file>
         <file>icons/full_screen.png</file>
         <file>icons/save_as.png</file>
+        <file>icons/undo.png</file>
+        <file>icons/redo.png</file>
     </qresource>
     <qresource prefix="/images">
         <file>icons/slavery.jpg</file>
