--- a/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
+++ b/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
@@ -23,5 +23,13 @@
         <file>icons/2d_ruler.png</file>
         <file>icons/2d_save.png</file>
         <file>icons/2d_target.png</file>
+        <file>icons/bottomButton.bmp</file>
+        <file>icons/bottomButtonPressed.bmp</file>
+        <file>icons/centralButton.bmp</file>
+        <file>icons/centralButtonPressed.bmp</file>
+        <file>icons/leftButton.bmp</file>
+        <file>icons/leftButtonPressed.bmp</file>
+        <file>icons/rightButton.bmp</file>
+        <file>icons/rightButtonPressed.bmp</file>
     </qresource>
 </RCC>
